fix bug with white background on small screens

--- a/src/app/components/main-page/main-page.component.sass
+++ b/src/app/components/main-page/main-page.component.sass
@@ -24,7 +24,10 @@ body
   opacity: 0.71
   mix-blend-mode: overlay
   position: relative
-  display: flex
+  width: 700px
+  min-height: 430px
+  min-width: 300px
+
 
 .status-name
   font-family: OpenSans, sans-serif
